# order-management-

./: README.md  pyproject.toml
app/: auth.py  config.py  database.py  main.py  models.py
app/routers/: auth.py  orders.py  products.py
